# 3ds_libzipfs

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: zipfs.h
source/: close.c  fstat.c  open.c  read.c  seek.c  stat.c  zipfs.c  zipfs_internal.h
source/zip/: header.c  headers.h  zip.c  zip.h
